fix: Only show service requests scrollbar if needed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -186,7 +186,7 @@ input {
 .service-requests {
   margin-top:15px;
   max-height: 366px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .btn-geolocate button {
